# terracatalogueclient

./: .gitignore  Jenkinsfile  README.md  api.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.cfg  setup.py  usage.html
.github/workflows/: sphinx2pages.yml
_modules/: index.html
_modules/terracatalogueclient/: client.html  config.html  exceptions.html
_sources/: api.rst.txt  index.rst.txt  installation.rst.txt  usage.rst.txt
docs/: api.rst  conf.py  index.rst  installation.rst  requirements.txt  usage.rst
docs/_templates/: hacks.html
terracatalogueclient/: __init__.py  auth.py  client.py  config.py  exceptions.py
terracatalogueclient/resources/: hrvpp.ini  terrascope.ini
tests/: test_cgls.py  test_client.py  test_config.py  test_hrvpp.py  test_integration.py  test_mock.py  test_s3.py
tests/resources/: hrvpp.ini  override.ini
