[metadata]
name = terracatalogueclient
version = attr: terracatalogueclient.__version__
author = Stijn Caerts
author_email = stijn.caerts@vito.be
description = Client for the Terrascope OpenSearch catalogue

[options]
packages = find:
test_suite = tests
install_requires =
    requests
    shapely
tests_require = pytest
setup_requires = pytest-runner

[aliases]
test = pytest